Print creator's call-stack on URLRequestContextGetter leak in Debug.

This adds a StackTrace member to the URLRequestContextGetter base, to
allow the call-stack that created the instance to be printed in case
of it having to be leaked because of the owning thread having gone away.

BUG=693965

Review-Url: https://codereview.chromium.org/2702083002
Cr-Commit-Position: refs/heads/master@{#452289}

Former-commit-id: c59596d13ec0e105c72dd69661b8bcb505d9afa7