net/url_request/url_request_context_getter.cc
@@ -40,8 +40,10 @@ void URLRequestContextGetter::OnDestruct() const {
         // Can't force-delete the object here, because some derived classes
         // can only be deleted on the owning thread, so just emit a warning to
         // aid in debugging.
+#if !defined(NDEBUG)
         DLOG(WARNING) << "URLRequestContextGetter leaking due to no owning"
-                      << " thread.";
+                      << " thread. Created at: " << created_at.ToString();
+#endif  // !defined(NDEBUG)
         // Let LSan know we know this is a leak. https://crbug.com/594130
         ANNOTATE_LEAKING_OBJECT_PTR(this);
       }
